--- a/src/index.njk
+++ b/src/index.njk
@@ -13,9 +13,9 @@ title: figamin.net
         __/
         </pre>
         <br>
-        <p>welcome to my place.</p>
+        <p>welcome to my place. i'm a developer, old stuff enthusiast, #1 ran-chan fan, and quite a few other things. i hope to flesh out this site (soon)</p><br>
         <ul>
-            <li><a href="/about">about</a></li>
+           <li><a href="/blog">blog</a></li>
         </ul>
     </div>
 
