--- a/src/blogs.njk
+++ b/src/blogs.njk
@@ -2,6 +2,9 @@
 layout: navbar.njk
 title: Blog Directory
 ---
+<p>welcome to my ramblings...</p><br>
+<p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p><br>
+<p>there's a tagging system but you can just go chronological like blogspot</p><br>
 <ul>
   {%- for post in collections.blog -%}
     <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
