--- a/src/index.njk
+++ b/src/index.njk
@@ -15,7 +15,7 @@ title: figamin.net
         <br>
         <p>welcome to my place. i'm a developer, old stuff enthusiast, #1 ran-chan fan, and quite a few other things. i hope to flesh out this site (soon)</p><br>
         <ul>
-           <li><a href="/blog">blog</a></li>
+           <li><a href="/blogs">blogs</a></li>
         </ul>
     </div>
 
