--- a/_includes/uy-navbar.njk
+++ b/_includes/uy-navbar.njk
@@ -1,5 +1,8 @@
 ---
 layout: "navbar.njk"
 ---
-<a href="/blogs/uy">&lt;-- Back</a>
+<a href="/blogs/uy">&lt;-- Back</a><br>
+<h1 class="blog-title">{{ title }}</h1>
+<h3 class="blog-date">{{ page.date | postDate }}</h3>
 {{ content | safe }}
+
