--- a/src/index.njk
+++ b/src/index.njk
@@ -14,9 +14,23 @@ title: figamin.net
         </pre>
         <br>
         <p>welcome to my place. i'm a developer, old stuff enthusiast, #1 ran-chan fan, and quite a few other things. i hope to flesh out this site (soon)</p><br>
-        <ul>
-           <li><a href="/blogs">blogs</a></li>
-        </ul>
+        <div class="center-list-holder">
+            <ul class="center-list-inner">
+            <li><a href="/blogs">blogs</a></li>
+            <li><a href="/cool-sites">cool sites</a></li>
+            <li><label for="indexlinks-menu-toggle"><a>[find me]</a></label>
+                <input type="checkbox" id="indexlinks-menu-toggle" class="menu-toggle"/>
+                <ul class="socials-list menu">
+                    <li><a href="https://twitter.com/figamin">twitter</a></li>
+                    <li><a href="https://bsky.app/profile/figamin.bsky.social">bluesky</a></li>
+                    <li><a href="https://github.com/figamin">github</a></li>
+                    <li><a href="https://anilist.co/user/figamin/">anilist</a></li>
+                    <li><a href="https://letterboxd.com/figamin/">letterboxd</a></li>
+                    <li><a href="https://discord.gg/crNSm7cQRz">discord guild</a></li>
+                </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 
 
