--- a/src/blogs.njk
+++ b/src/blogs.njk
@@ -7,14 +7,14 @@ title: Blog Directory
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
 <input type="checkbox" id="uy-menu-toggle" class="menu-toggle"/>
-<ul class="menu">
+<ul class="sublist menu">
   {%- for post in collections.urusei -%}
   <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
   {%- endfor -%}
 </ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
 <input type="checkbox" id="blogs-menu-toggle" class="menu-toggle"/>
-<ul class="menu">
+<ul class="sublist menu">
   {%- for post in collections.blog -%}
   <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
   {%- endfor -%}
