--- a/src/blogs.njk
+++ b/src/blogs.njk
@@ -12,6 +12,13 @@ title: Blog Directory
   <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
   {%- endfor -%}
 </ul>
+<label for="wapchan-menu-toggle"><a>[Wapchan Blogs]</a></label>
+<input type="checkbox" id="wapchan-menu-toggle" class="menu-toggle"/>
+<ul class="sublist menu">
+  {%- for post in collections.wapchan -%}
+  <li><a href="{{ post.url }}">{{ post.data.title }}</a></li>
+  {%- endfor -%}
+</ul>
 <label for="blogs-menu-toggle"><a>[All Blogs]</a></label>
 <input type="checkbox" id="blogs-menu-toggle" class="menu-toggle"/>
 <ul class="sublist menu">
