--- a/src/index.njk
+++ b/src/index.njk
@@ -18,6 +18,7 @@ title: figamin.net
             <ul class="center-list-inner">
             <li><a href="/blogs">blogs</a></li>
             <li><a href="/cool-sites">cool sites</a></li>
+            <li><a href="https://wapchan.org">wapchan.org</a></li>
             <li><label for="indexlinks-menu-toggle"><a>[find me]</a></label>
                 <input type="checkbox" id="indexlinks-menu-toggle" class="menu-toggle"/>
                 <ul class="socials-list menu">
