in progress counter

--- a/_includes/navbar.njk
+++ b/_includes/navbar.njk
@@ -4,6 +4,7 @@ layout: "base.njk"
 <nav>
     [<a href="/">home</a> /
     <a href="/about">about</a> /
+    <a href="/blogs">blogs</a> /
     <a href="/gallery">gallery</a> /
     <a href="https://www.youtube.com/@figamin">youtube</a>]
 </nav>
