--- a/src/index.njk
+++ b/src/index.njk
@@ -32,6 +32,8 @@ title: figamin.net
                 </li>
             </ul>
         </div>
+        <span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter" eleventy:ignore/>
+        
     </div>
 
 
