--- a/src/index.njk
+++ b/src/index.njk
@@ -13,10 +13,17 @@ title: figamin.net
         __/
         </pre>
         <br>
-        <p>welcome to my place. i'm a developer, old stuff enthusiast, #1 ran-chan fan, and quite a few other things. i hope to flesh out this site (soon)</p><br>
+        <p>welcome to my place. i'm a developer, old stuff enthusiast, #1 ran-chan fan, and quite a few other things. i hope to flesh out this site (soon)</p>
+        <p>Recent Blogs:</p>
+        {% set top = 3 %}
+        {%- for post in collections.blog -%}
+        {% if (loop.index <= top) and (top <= loop.length) %}
+        <a href="{{ post.url }}">{{ post.data.title }}</a> on {{ post.date | postDate }}<br>
+        {% endif %}
+        {%- endfor -%}
         <div class="center-list-holder">
             <ul class="center-list-inner">
-            <li><a href="/blogs">blogs</a></li>
+            <li><a href="/blogs">all blogs</a></li>
             <li><a href="/cool-sites">cool sites</a></li>
             <li><a href="https://wapchan.org">wapchan.org</a></li>
             <li><label for="indexlinks-menu-toggle"><a>[find me]</a></label>
