--- a/src/index.njk
+++ b/src/index.njk
@@ -1,45 +1,29 @@
 ---
-layout: navbar.njk
+layout: base.njk
 title: figamin.net
 ---
+<div class="index-top-bar">
+    <img id="siteLogo" src="/static/images/sitelogo.svg" alt="figamin.net" eleventy:ignore>
+    <div class="index-quote-box"><p>Everyone's favorite<br>little site.</p></div>
+</div>
     <div id="welcome">
-        <pre>
-    ___
-   /
-  /___  .  ___   ___            .  ___      ___   ___  _/_
- /     /  /  /  /  /   /| /|   /  /  /     /  /  /__/  /
-/     /  /__/  /__/\  / |/ |  /  /  /  .  /  /  /__   /
-           /
-        __/
-        </pre>
-        <br>
-        <p>welcome to my place. i'm a developer, old stuff enthusiast, #1 ran-chan fan, and quite a few other things. i hope to flesh out this site (soon)</p>
-        <p>Recent Blogs:</p>
-        {% set top = 3 %}
-        {%- for post in collections.blog -%}
-        {% if (loop.index <= top) and (top <= loop.length) %}
-        <a href="{{ post.url }}">{{ post.data.title }}</a> on {{ post.date | postDate }}<br>
-        {% endif %}
-        {%- endfor -%}
-        <div class="center-list-holder">
-            <ul class="center-list-inner">
-            <li><a href="/blogs">all blogs</a></li>
-            <li><a href="/cool-sites">cool sites</a></li>
-            <li><a href="https://wapchan.org">wapchan.org</a></li>
-            <li><label for="indexlinks-menu-toggle"><a>[find me]</a></label>
-                <input type="checkbox" id="indexlinks-menu-toggle" class="menu-toggle"/>
-                <ul class="socials-list menu">
-                    <li><a href="https://twitter.com/figamin">twitter</a></li>
-                    <li><a href="https://bsky.app/profile/figamin.bsky.social">bluesky</a></li>
-                    <li><a href="https://github.com/figamin">github</a></li>
-                    <li><a href="https://anilist.co/user/figamin/">anilist</a></li>
-                    <li><a href="https://letterboxd.com/figamin/">letterboxd</a></li>
-                    <li><a href="https://discord.gg/crNSm7cQRz">discord guild</a></li>
-                </ul>
-                </li>
-            </ul>
+        <nav class="index-side-container">
+            <a class="box-text" href="/blogs"><div class="index-side-nav-boxes">blogs</div></a>
+            <a class="box-text" href="/projects"><div class="index-side-nav-boxes">projects</div></a>
+            <a class="box-text" href="/videos"><div class="index-side-nav-boxes">videos</div></a>
+            <a class="box-text" href="/videos"><div class="index-side-nav-boxes">twitter</div></a>
+            <div id="counter-box" class="index-side-nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter" eleventy:ignore/></div>
+        </nav>
+        <div class="index-center-boxes">
+            <p class="index-center-text">Hello! I'm figamin. I recently graduated from college and am now working as a software dev in addition to a whole host of side projects such as wapchan, DCX, RumicFigher and more. I also make youtube videos about tech and video games, and I've been reading a lot more visual novels lately.<br>Welcome to my little corner of the internet.</p>
         </div>
-        <span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter" eleventy:ignore/>
+        <div class="index-news-box-title">
+            <p>News:</p>
+        </div>
+        <div class="index-news-box-content">
+            <p>example news</p>
+        </div>
+        
         
     </div>
 
