--- a/static/css/bundle.css
+++ b/static/css/bundle.css
@@ -185,6 +185,21 @@
     font-weight: bold;
     font-style: italic;
   }
+  @font-face {
+    font-family: "Sazanami Gothic";
+    src: url("fonts/sazanami-gothic.woff2") format("woff2"),
+    url("fonts/sazanami-gothic.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Sazanami Gothic 1";
+    src: url("fonts/sazanami-gothic-1.woff2") format("woff2"),
+    url("fonts/sazanami-gothic-1.woff") format("woff");
+  }
+  @font-face {
+    font-family: "Sazanami Gothic 2";
+    src: url("fonts/sazanami-gothic-2.woff2") format("woff2"),
+    url("fonts/sazanami-gothic-2.woff") format("woff");
+  }
 :root {
     --background-color: #1d1f21;
     /*--input-color: #282a2e;*/
@@ -201,15 +216,16 @@
     --wapchan-yellow: #fffe00;
 }
 body {
-    background: #1d1f21;
-    color: #c5c8c6;
-    font-family: "Times Pixelated 16";
+    background: url("wallpattern-simple.png");
+    color: black;
+    font-family: "Sazanami Gothic";
+    font-size: 70%;
 }
 h1 {
     font-family: "Times Pixelated 32";
 }
 a {
-    color: var(--link-color);
+    color: black;
     text-decoration: none;
 }
 a:hover {
@@ -271,9 +287,10 @@ label {
 }
 .center-list-holder {
   display: flex;
-  justify-content: center;
+  justify-content: left;
 }
 .center-list-inner {
+  padding-left: 0;
   text-align: left;
 }
 .socials-list {
@@ -288,4 +305,79 @@ label {
 img {
   max-width: 100%;
   height: auto;
+}
+#siteLogo {
+  width: 213px;
+  height: auto;
+  image-rendering: pixelated;
+}
+.index-side-container {
+  position: absolute
+}
+.index-side-nav-boxes {
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  background: rgb(255,113,184);
+background: linear-gradient(0deg, rgba(255,113,184,1) 0%, rgba(255,176,187,1) 10%, rgba(255,226,230,1) 30%, rgba(255,255,255,1) 100%);
+width: 7em;
+height: 2em;
+text-align: center;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.index-side-bottom-box {
+  border-bottom: 1px solid black;
+}
+#counter-box {
+  height: 5em;
+  flex-direction: column;
+}
+.index-side-container {
+  box-shadow: .25em .25em black;
+}
+.index-center-boxes {
+  border: 1px solid black;
+  height: 13.35em;
+  width: 20em;
+  margin-left: 8em;
+  background: white;
+  box-shadow: .25em .25em black;
+  text-align: left;
+  display: flex;
+}
+.index-center-boxes p {
+  display: flex;
+  font-size: 90%;
+  align-items: center;
+}
+.index-center-text {
+  padding: 1em;
+}
+.index-top-bar {
+  display: inline-flex;
+}
+.index-quote-box {
+  margin-left: 1em;
+  font-style: italic;
+  width: 9em;
+  display: flex;
+}
+.index-quote-box p {
+  margin: 0;
+  font-size: 85%;
+  display: flex;
+  align-items: center;
+}
+.index-news-box-title {
+  position: absolute;
+  bottom: 10em;
+  border: 1px solid black;
+  width: 3em;
+}
+.index-news-box-content {
+  position: absolute;
+  bottom: 8em;
+  border: 1px solid black;
 }
