vn aspect ratio setting

--- a/src/blogs/uy/blog-vn-test.njk
+++ b/src/blogs/uy/blog-vn-test.njk
@@ -1,5 +1,5 @@
 ---
-title: How I got into Urusei Yatsura
+title: Blog VN Test
 date: Created
 ---
 
@@ -7,9 +7,15 @@ date: Created
 
 Mion didn't seem amused at how quickly I gave in to Rena after teasing her so much. I, on the other hand, found Mion's annoyance highly amusing. So I hurried Rena forward, quickening our pace to leave Mion behind.
 </div>-->
-<div class="new-body"><div class="blog-body"><div id="story-container"></div></div></div>
+<div class="aspect-ratio-holder"><div class="new-body"><div class="blog-body"><div id="story-container"></div></div></div>
 <div id="instruction"></div>
 <img class="bg-sprite" src="/static/images/mion.png" eleventy:ignore>
+</div>
+<p style="color:black; text-shadow: none;">This is a test of a NScripter-like view using CSS and a bit of JS. It is what I will use for my blog entries.<br>
+    Press ENTER to advance the story.<br>
+    Press SPACE to hide/show the text.<br>
+    This was made to be viewed at 640x480 but should be easily scalable, provided the resolution is still 4/3.
+</p>
 <script>
         // The story paragraph split into sentences
         const sentences = [
