--- a/src/blogs.njk
+++ b/src/blogs.njk
@@ -1,8 +1,9 @@
 ---
-layout: blog-base.njk
+layout: blog-classic-base.njk
 title: Blog Directory
 ---
-<p>welcome to my ramblings...</p>
+<p class="textLogo" src="/static/images/sitelogo.svg" alt="figamin.net" eleventy:ignore>Blogs (placeholder)</p>
+<a class="box-text" href="/blogs"><div class="index-side-nav-boxes index-side-bottom-box index-side-container"><- go back</div></a>
 <p>here i will be posting writeups, retrospectives, life stuff, favorite ciders. all the goodies, really</p>
 <p>there's a tagging system but you can just go chronological like blogspot</p>
 <label for="uy-menu-toggle"><a>[Urusei Yatsura Blogs]</a></label>
