--- a/src/index.njk
+++ b/src/index.njk
@@ -15,14 +15,14 @@ title: figamin.net
             <div id="counter-box" class="index-side-nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter" eleventy:ignore/></div>
         </nav>
         <div class="index-center-boxes">
-            <p class="index-center-text">Hello! I'm figamin. I recently graduated from college and am now working as a software dev in addition to a whole host of side projects such as wapchan, DCX, RumicFigher and more. I also make youtube videos about tech and video games, and I've been reading a lot more visual novels lately.<br>Welcome to my little corner of the internet.</p>
+            <p class="index-center-text">Hello! I'm figamin. I recently graduated from college and am now working as a software dev in addition to a whole host of side projects such as wapchan, 39chan, libremarch, and more. I also make youtube videos about tech and video games, and I've been reading a lot more visual novels lately.<br>Welcome to my little corner of the internet.</p>
         </div>
-        <div class="index-news-box-title">
+        <!--<div class="index-news-box-title">
             <p>News:</p>
         </div>
         <div class="index-news-box-content">
             <p>example news</p>
-        </div>
+        </div>-->
         
         
     </div>
