--- a/static/css/blog-classic.css
+++ b/static/css/blog-classic.css
@@ -216,7 +216,7 @@
     --wapchan-yellow: #fffe00;
 }
 body {
-    background: url("wallpattern-simple.png");
+    background: url("wallpattern-blog.png");
     color: black;
     font-family: "Sazanami Gothic";
     font-size: 70%;
