--- a/_includes/blog-vn-base.njk
+++ b/_includes/blog-vn-base.njk
@@ -7,7 +7,7 @@ title: Placeholder
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/blog.css">
+    <link rel="stylesheet" href="/static/css/blog-vn.css">
     <title>{{ title }}</title>
   </head>
   <body>
