--- a/src/index.njk
+++ b/src/index.njk
@@ -4,18 +4,24 @@ title: figamin.net
 ---
 <div class="index-top-bar">
     <img id="siteLogo" src="/static/images/sitelogo.svg" alt="figamin.net" eleventy:ignore>
-    <div class="index-quote-box"><p>Everyone's favorite<br>little site.</p></div>
+    <!--<div class="index-quote-box"><p>Miracles don't happen.</p></div>-->
 </div>
-    <div id="welcome">
-        <nav class="index-side-container">
-            <a class="box-text" href="/blogs"><div class="index-side-nav-boxes">blogs</div></a>
-            <a class="box-text" href="/projects"><div class="index-side-nav-boxes">projects</div></a>
-            <a class="box-text" href="/videos"><div class="index-side-nav-boxes">videos</div></a>
-            <a class="box-text" href="/videos"><div class="index-side-nav-boxes">twitter</div></a>
-            <div id="counter-box" class="index-side-nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter" eleventy:ignore/></div>
+    <div id="main-body">
+        <nav class="nav-parent">
+            <a class="nav-boxes" href="/blogs">blogs</a>
+            <a class="nav-boxes" href="/projects">projects</a>
+            <a class="nav-boxes" href="/videos">videos</a>
+            <a class="nav-boxes" href="/socials">socials</a>
+            <a class="nav-boxes" href="/net-friends">net friends</a>
+            <div id="counter-box" class="nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><img style="vertical-align: middle;" src="https://count.getloli.com/@figamin-net-counter?name=figamin-net-counter&theme=3d-num&padding=1&offset=0&align=center&scale=.275&pixelated=1&darkmode=auto" alt=":figamin-net-counter" eleventy:ignore/></div>
         </nav>
-        <div class="index-center-boxes">
-            <p class="index-center-text">Hello! I'm figamin. I recently graduated from college and am now working as a software dev in addition to a whole host of side projects such as wapchan, 39chan, libremarch, and more. I also make youtube videos about tech and video games, and I've been reading a lot more visual novels lately.<br>Welcome to my little corner of the internet.</p>
+        <div class="message-box">
+            <p class="message-text">Hello! I'm figamin. Been relatively active in both the retro anime & visual novel scenes recently. This is a place to find my writeups about stuff that I think is neat.</p>
+        </div>
+        <div class="news-tag">News - 6/14/25</div>
+        <div class="news-box">
+            <p class="news-text">I fixed the site so it's not horribly broken anymore
+            </p>
         </div>
         <!--<div class="index-news-box-title">
             <p>News:</p>
