--- a/static/css/blog-classic copy.css
+++ b/static/css/blog-classic copy.css
@@ -216,7 +216,7 @@
     --wapchan-yellow: #fffe00;
 }
 body {
-    background: url("wallpattern-simple.png");
+    background: url("wallpattern-blog.png");
     color: black;
     font-family: "Sazanami Gothic";
     font-size: 70%;
@@ -314,7 +314,7 @@ img {
 .index-side-container {
   position: absolute
 }
-.index-side-nav-boxes {
+.nav-boxes {
   border-top: 1px solid black;
   border-left: 1px solid black;
   border-right: 1px solid black;
@@ -342,6 +342,16 @@ justify-content: center;
   height: 13.35em;
   width: 20em;
   margin-left: 8em;
+  background: white;
+  box-shadow: .25em .25em black;
+  text-align: left;
+  display: flex;
+}
+.page-center-boxes {
+  border: 1px solid black;
+  height: 13.35em;
+  width: 20em;
+  margin-top: 1.5em;
   background: white;
   box-shadow: .25em .25em black;
   text-align: left;
