--- a/src/net-friends.njk
+++ b/src/net-friends.njk
@@ -19,7 +19,7 @@ title: Net Friends
     <span class="box-shadow left-space nav-boxes-non-button">PC-98 enthusiast</span>
   </div>
   <div class="blog-row">
-    <a class="box-shadow nav-boxes" href="https://x.com/enapro_circle">同人サークル「ena project」</a>
+    <a class="box-shadow nav-boxes" href="https://x.com/enapro_circle">同人サークル「ena imageboards」</a>
     <span class="box-shadow left-space nav-boxes-non-button">Independent, global doujin circle</span>
   </div>
   <div class="blog-row">
