--- a/src/fargo1999/toheart-pse.njk
+++ b/src/fargo1999/toheart-pse.njk
@@ -13,6 +13,7 @@ date: "git Last Modified"
 
     </ul>
     <h2 class="toheart">FAQ:</h2>
+    <div style="text-align: left;">
     <details class="toheart">
         <summary>Why not just play the remake?</summary>
     <p>While the remake certainly had a lot of effort into it, in many ways it is a very different experience despite using nearly the same script:</p>
@@ -29,7 +30,7 @@ date: "git Last Modified"
     <summary>I thought it was "To Heart"?</summary>
     <p>This game has had a confusing history when it comes to the space in the title. To clarify:</p>
     <img src="./img/toheart97.webp" alt="">
-    <p><a href="https://vndb.org/v18" target="_blank">To Heart</a> (with a space) refers to the original 1997 18+ release.
+    <p><a href="https://vndb.org/v18" target="_blank">To Heart</a> (with a space) refers to the original 1997 18+ release.</p>
     <img src="./img/toheart03.webp" alt="">
     <p><a href="https://vndb.org/v30616" target="_blank">ToHeart</a> (without a space) refers to the 1999 all ages release on the PS1, which was substantially different from the original. It was later backported to the PC as PSE which was in turn ported to the PS2 and PSP. The 2025 remake is based off this, as is this project.</p>
 </details>
@@ -66,4 +67,6 @@ date: "git Last Modified"
     <summary>Is this piracy?</summary>
     <p>To encourage supporting ALPHAPLUS, this will require a copy of the 2025 remake in order to build the translated archive files necessary for the game.</p>
 </details>
+</div>
+<a href="https://github.com/figamin/toheart-pse-tools"><h2>Git Repo</h2></a>
 </div>
