--- a/src/imageboards.njk
+++ b/src/imageboards.njk
@@ -7,7 +7,7 @@ title: Imageboards
   <span class="box-shadow left-space nav-boxes-non-button"><b>Imageboards</b></span>
 </div>
 <div class="message-box">
-  <p class="message-text">I work on a bunch of random stuff. Here's where you'll find info about them</p>
+  <p class="message-text">Posts about imageboards I work on or get along with.</p>
 </div>
 <div class="blog-entries">
   {%- for post in collections.imageboards | reverse -%}
