--- a/src/blogs-vn/blog-vn-test.njk
+++ b/src/blogs-vn/blog-vn-test.njk
@@ -1,6 +1,6 @@
 ---
 title: Blog VN Test
-date: "git Created"
+date: 2025-02-01
 ---
 
 <!--<div class="blog-body">"Hey, hey! Aren't you giving us two completely different answers here?!"
