--- a/src/index.njk
+++ b/src/index.njk
@@ -21,9 +21,9 @@ title: figamin.net
         <div class="message-box">
             <p class="message-text">Hello! I'm figamin. Been relatively active in both the retro anime & visual novel scenes recently. This is a place to find my writeups about stuff that I think is neat.</p>
         </div>
-        <div class="news-tag">News - 7/9/25</div>
+        <div class="news-tag">News - 9/25/25</div>
         <div class="news-box">
-            <p class="news-text">Changed the counter design and added an about page
+            <p class="news-text">Added ONE and Kanon blogs, as well as Fargo1999
             </p>
         </div>
         <!--<div class="index-news-box-title">
