added toheart video

--- a/src/fargo1999/toheart-pse.njk
+++ b/src/fargo1999/toheart-pse.njk
@@ -5,6 +5,10 @@ date: "git Last Modified"
 <div class="centered-container">
     <h1 class="toheart">ToHeart PSE English Patch</h1>
     <h3 class="toheart">This is an in-development patch to translate <a href="https://vndb.org/v30616">ToHeart PSE</a> into English, using the <a href="https://store.steampowered.com/app/3380520/ToHeart/">2025 Remake</a> script as a base.</h3>
+    <h2 class="toheart">Preview:</h2>
+    <video controls>
+        <source src="./img/thupdate.webm" type="video/webm" />
+    </video>
     <h2 class="toheart">Planned Features:</h2>
     <ul class="toheart">
         <li>Full script & UI in English (including scenes not in the remake such as the preludes to omake games)</li>
