--- a/src/index.njk
+++ b/src/index.njk
@@ -20,10 +20,17 @@ title: figamin.net
             <main>
                 <p id="main-text">Hey! I'm figamin. This is my personal site where I talk about stuff sometimes. You might find it interesting.</p>
             </main>
-            <div class="bars">
-            </div>
             <div id="main-buttons">
-
+                <a class="button" href="https://wapchan.org"><img src="/static/images/buttons/wapchan1.gif" alt="Wapchan" eleventy:ignore></a>
+                <a class="button" href="https://39chan.moe"><img src="/static/images/buttons/39chan1.gif" alt="39chan" eleventy:ignore></a>
+                <a class="button" href="https://kissu.moe"><img src="/static/images/buttons/kissu1.gif" alt="Kissu" eleventy:ignore></a>
+                <a class="button" href="https://hikari3.ch"><img src="/static/images/buttons/hikari31.gif" alt="Hikari3" eleventy:ignore></a>
+                <a class="button" href="https://syrno.net"><img src="/static/images/buttons/syrno1.png" alt="Syrno" eleventy:ignore></a>
+                <a class="button" href="https://x.com/enapro_circle"><img src="/static/images/buttons/fsenapro.gif" alt="enapro" eleventy:ignore></a>
+                <a class="button" href="https://kindofblue28.neocities.org/"><img src="/static/images/buttons/midnight.png" alt="midnight" eleventy:ignore></a>
+                <a class="button" href="https://demuresoft.xyz/"><img src="/static/images/buttons/DemureSoft8311.gif" alt="demuresoft" eleventy:ignore></a>
+                <a class="button" href="https://pc98.club/"><img src="/static/images/buttons/98club.gif" alt="pc98club" eleventy:ignore></a>
+                <a class="button" href="http://toastytech.com/"><img src="/static/images/buttons/nuts.gif" alt="toastytech" eleventy:ignore></a>
             </div>
         </div>
         
