--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,105 +1,165 @@
-@import url(fonts.css);
-:root {
-    --background-color: #1d1f21;
-    /*--input-color: #282a2e;*/
-    --reply-color: #242629;
-    --reply-border-color: #848484;
-    --input-border-color: #111;
-    --text-color: #c5c8c6;
-    --link-color: #9ab9f2;
-    --link-hover-color: #81a2be;
-    --subject-color: #ed7db6;
-    --name-color: #7fedb5;
-    --capcode-color: #ff8a8a;
-    --sauce-color: #ffadff;
-    --wapchan-yellow: #fffe00;
+@font-face {
+    font-family: "Web437_NEC_APC3_8x16";
+    src: url("fonts/Web437_NEC_APC3_8x16.woff") format("woff");
+  }
+a {
+  text-decoration: none;
+  color: black;
 }
 body {
-    background: url("wallpattern-simple.png");
-    color: black;
-    font-family: "Sazanami Gothic";
-    font-size: 70%;
+  background: url("wallpattern-simple.png");
+  font-size: 16pt;
+  box-sizing: border-box;
+  font-family: "Web437_NEC_APC3_8x16";
 }
-#siteLogo {
-  width: 213px;
-  height: auto;
-  image-rendering: pixelated;
+#main-holder {
+  width: 85%;
+  margin-left: 1%;
+  margin-right: 1%;
+  
 }
-#main-body {
-    flex-direction: column;
-    text-align: center;
-}
-.nav-parent {
-  position: absolute;
-  box-shadow: .25em .25em black;
-}
-.nav-boxes {
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  background: rgb(255,113,184);
-background: linear-gradient(0deg, rgba(255,113,184,1) 0%, rgba(255,176,187,1) 10%, rgba(255,226,230,1) 30%, rgba(255,255,255,1) 100%);
-width: 7em;
-height: 2em;
-text-align: center;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-.message-box {
+main {
   border: 1px solid black;
-  height: 8em;
-  width: 20em;
-  margin-left: 8em;
-  background: white;
+  background-color: white;
+  height: 85%;
+  box-sizing: border-box;
   box-shadow: .25em .25em black;
-  text-align: left;
-  display: flex;
 }
-.news-box {
+#main-buttons {
+  height: 15%;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.button {
+  height: 48px;
+  width: auto;
+  margin: .5rem
+}
+.button img {
+  height: 100%;
+  width: 100%;
   border: 1px solid black;
-  height: 6.85em;
-  width: 20em;
-  margin-left: 8em;
-  background: white;
   box-shadow: .25em .25em black;
-  text-align: left;
+}
+ul {
+  list-style-type: none;
+}
+#update-holder {
+  width: 15%;
   display: flex;
-  margin-top: 5px;
-}
-.news-tag {
-background: white;
-margin-top: .45em;
-margin-left: 8em;
-border: 1px solid black;
-border-bottom: 1px solid black;
-padding-left: .5em;
-padding-right: .5em;
-height: 1.5em;
-text-align: center;
-display: flex;
-align-items: center;
-justify-content: center;
-position: absolute;
-}
-.message-text {
-  padding-right: 1em;
-  padding-left: 1em;
-}
-.news-text {
-  padding-right: 1em;
-  padding-left: 1em;
-  padding-top: 1em;
-}
-#counter-box {
-  height: 5em;
   flex-direction: column;
-  border-bottom: 1px solid black;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-a {
-    color: black;
-    text-decoration: none;
+#update-logo {
+  background: linear-gradient(0deg, rgba(255,113,184,1) 0%, rgba(255,176,187,1) 10%, rgba(255,226,230,1) 30%, rgba(255,255,255,1) 100%);
+  border: 1px solid black;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: .25em .25em black;
 }
-a:hover {
-	color: var(--link-hover-color);
+.bars {
+  height: 5%;
+}
+#update-box {
+  background-color: white;
+  border: 1px solid black;
+  height: 85%;
+  box-shadow: .25em .25em black;
+}
+#update-box-text {
+  font-size: .9em;
+  margin: 1rem;
+  padding: 0;
+}
+#header {
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+#content {
+  max-width: 80%;
+  margin: 0 auto;
+}
+#header-logo {
+  max-width: 20%;
+  height: auto;
+}
+#header-quote {
+  margin-left: 1rem;
+}
+#footer {
+  text-align: center;
+}
+#general {
+  display: flex;
+  flex-direction: row;
+}
+#sidebar {
+  display: flex;
+  flex-direction: column;
+}
+.sidebar-box {
+  text-align: center;
+  padding: 1rem;
+  border: 1px solid black;
+  box-shadow: .25em .25em black;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background: linear-gradient(0deg, rgba(255,113,184,1) 0%, rgba(255,176,187,1) 10%, rgba(255,226,230,1) 30%, rgba(255,255,255,1) 100%);
+}
+#main-text {
+  margin: 1rem;
+  font-size: 1.5em
+}
+@media screen and (max-width: 800px) {
+  body {
+    font-size: 1em;
+  }
+  main {
+    height: 70%;
+  }
+  #main-buttons {
+    height: 30%;
+  }
+  #content {
+    max-width: 100%;
+    margin: 0;
+  }
+  #sidebar {
+    width: 20%;
+  }
+  #header {
+    margin: 0;
+  }
+  #header-logo {
+    max-width: 60%;
+    height: auto;
+    margin-bottom: .25rem;
+  }
+  .sidebar-box {
+    margin: .5rem;
+  }
+  #main-holder {
+    width: 60%;
+  }
+  #update-holder {
+    width: 20%
+  }
+  .button {
+    height: 31px;
+    margin: .25rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .85em;
+  }
 }
