--- a/src/index.njk
+++ b/src/index.njk
@@ -11,12 +11,10 @@ title: figamin.net
             <a class="nav-boxes" href="/about">about</a>
             <a class="nav-boxes" href="/blogs">blogs</a>
             <a class="nav-boxes" href="/imageboards">imageboards</a>
+            <a class="nav-boxes" href="/figzone">figzone</a>
             <a class="nav-boxes" href="/fargo1999">fargo1999</a>
             <a class="nav-boxes" href="/videos">videos</a>
             <a class="nav-boxes" href="/net-friends">net friends</a>
-            <div id="counter-box" class="nav-boxes index-side-bottom-box"><span style="vertical-align: middle;">you are visitor #</span><!-- FC2カウンター ここから -->
-<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=40460552&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=40460552&main=1"  alt=":figamin-net-counter" eleventy:ignore//></noscript>
-<!-- FC2カウンター ここまで --></div>
         </nav>
         <div class="message-box">
             <p class="message-text">Hello! I'm figamin. Been relatively active in both the retro anime & visual novel scenes recently. This is a place to find my writeups about stuff that I think is neat.</p>
